--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@
 	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
+	width: 100%;
+	height: 100%;
+	overflow-y: clip;
 
 	color-scheme: light dark;
 	color: var(--text-primary);
@@ -26,19 +29,19 @@
 
 body {
 	margin: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	min-width: 320px;
 	min-height: 100vh;
 	width: 100%;
 	height: 100%;
+	overflow-y: clip;
 }
 
 #root {
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
+	align-items: center;
+	overflow-y: clip;
 }
