feat: Refactor Carousel component and remove unused CarouselArrowButton; add CarouselArrowControl for improved navigation
feat: Replace CarouselArrowButton with CarouselArrowControl for improved navigation; add related types and hooks

feat: Add CarouselDotControl component with button functionality and related hooks

feat: Replace Container with PageContentContainer in Footer, Header, and PageWrapper for consistent layout

fix: Simplify TabPanel component by removing unnecessary Box and enableStack props

fix: Remove enableStack prop from TabPanel and related test cases for simplification

fix: Refactor TabPanel component to include sx prop and improve structure

feat: Refactor layout components and styles for improved structure and consistency

--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,6 @@
 	font-weight: 400;
 	width: 100%;
 	height: 100%;
-	overflow-y: clip;
 
 	color-scheme: light dark;
 	color: var(--text-primary);
@@ -30,18 +29,16 @@
 body {
 	margin: 0;
 	min-width: 320px;
-	min-height: 100vh;
 	width: 100%;
 	height: 100%;
-	overflow-y: clip;
+	overflow: hidden;
 }
 
 #root {
 	width: 100%;
-	min-height: 100%;
+	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
-	overflow-y: clip;
 }
